Adição do Identity Server na API e criação da primeira migration do banco de dados

--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DBConnectionString": "server=enp150-mysql.mysql.database.azure.com;port=3306;user=jordan;password=Enp150ufop!;database=classificacao;"
+    "DBConnectionString": "server=localhost;port=3306;user=root;password=1q2w3e;database=geeu-db;"
   }
 }
