--- a/src/Models/Models.csproj
+++ b/src/Models/Models.csproj
@@ -1,15 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Extensions.FluentValidation.Br" Version="1.0.2" />
-    <PackageReference Include="FluentValidation" Version="11.5.1" />
-    <PackageReference Include="LinqKit" Version="1.2.3" />
+    <PackageReference Include="FluentValidation" Version="11.5.2" />
+    <PackageReference Include="IdentityServer4" Version="4.1.2" />
+    <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.1.2" />
+    <PackageReference Include="LinqKit" Version="1.2.4" />
   </ItemGroup>
 
   <ItemGroup>
