Adição de novos métodos. Adição de campos e configurando a API para o postgresql

--- a/src/WebApi/appsettings.Development.json
+++ b/src/WebApi/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DBConnectionString": "server=localhost;port=3306;user=root;password=1q2w3e;database=geeu-db;"
+    "DBConnectionString": "host=localhost;database=geeu-db;user id=postgres;password=1q2w3e;"
   }
 }
