--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -8,5 +8,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DBConnectionString": "host=localhost;database=geeu-db;user id=postgres;password=1q2w3e;"
+  },
+  "JWT": {
+    "Key": "9147a3c1-51ac-479a-a611-ecd2c7e89c55"
+  },
+  "HttpService": {
+    "UFOPBaseURL": "https://meuicea.ufop.br/ldapi"
+  },
+  "UFOPAuthorizeObject": {
+    "Username": "",
+    "Password": ""
   }
 }
